# honors-thesis

./: README.md  honors-thesis.ipynb  main.py  pyproject.toml  requirements.txt
AlexNet/: fingerprint.pb  saved_model.pb
AlexNet/variables/: variables.index
LeNet-5/: fingerprint.pb  saved_model.pb
LeNet-5/variables/: variables.data-00000-of-00001  variables.index
ML class/: k-folds-cross-validation.ipynb  logreg_1.xlsx  svm.ipynb
MLP/: fingerprint.pb  saved_model.pb
MLP/variables/: variables.data-00000-of-00001  variables.index
