[project]
name = "honors-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=3.8.0",
    "matplotlib>=3.10.1",
    "model-profiler>=1.1.8",
    "tensorflow>=2.18.0",
    "tensorflow-metal>=1.2.0",
    "tqdm>=4.67.1",
]
